Fix css problem with the overflow in suggestions
git-svn-id: https://projects.iti.upv.es/svn/prhlt/software/casmacat-server-library/trunk@6666 8b0d7800-f05a-0410-912a-ed64b2e63916

--- a/server/web/css/index.css
+++ b/server/web/css/index.css
@@ -124,7 +124,7 @@ textarea {
 	float: left;
 }
 #suggestions dd {
-	margin-left: 40px;
+	margin-left: 60px;
 	height: 22px;
 }
 
